argocd/nginx-download-app/00-deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx
  namespace: nginx-download
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 1000}
      - setWeight: 60
      - pause: {duration: 1000}
      - setWeight: 80
      - pause: {duration: 1000}
      - setWeight: 90
      - pause: {}
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: bacherik/filedownload:latest
        ports:
        - containerPort: 80
