argocd/nginx-download-app/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  nginx
  namespace: nginx-download
spec:
  selector:
    app:  nginx
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
