argocd/nginx-download-app/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-download
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - file.bacherik.de
    secretName: nginx-tls
  rules:
  - host: "file.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
